--- a/services/users/package.json
+++ b/services/users/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src",
     "test": "jest",
     "watch-tests": "jest --watchAll",
-    "dev": "nodemon --watch ./src --ignore ./src/__tests__ -x \"npm start\"",
+    "dev": "nodemon --inspect --watch ./src --ignore ./src/__tests__ -x \"npm start\"",
     "coverage": "jest --coverage"
   },
   "author": "",
@@ -25,6 +25,8 @@
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "pg-promise": "^8.4.6",
@@ -78,7 +80,12 @@
       ],
       "no-console": [
         "error",
-         { "allow": ["warn", "log"] }
+        {
+          "allow": [
+            "warn",
+            "log"
+          ]
+        }
       ]
     }
   }
