--- a/services/users/package.json
+++ b/services/users/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
+    "express-session": "^1.15.6",
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.4",
