--- a/services/users/package.json
+++ b/services/users/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
