--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,39 +13,39 @@ services:
     healthcheck:
       test: exit 0
 
-  spots-db:
-    container_name: spots-db
-    build: ./services/spots/src/database
-    ports:
-      - '5434:5432' # expose ports - HOST:CONTAINER
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-    healthcheck:
-      test: exit 0
+  # spots-db:
+  #   container_name: spots-db
+  #   build: ./services/spots/src/database
+  #   ports:
+  #     - '5434:5432' # expose ports - HOST:CONTAINER
+  #   environment:
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=postgres
+  #   healthcheck:
+  #     test: exit 0
 
-  spots-service:
-    container_name: spots-service
-    build: ./services/spots/
-    volumes:
-      - './services/spots:/usr/src/app'
-      - './services/spots/package.json:/usr/src/package.json'
-    ports:
-      - '3001:3000' # expose ports - HOST:CONTAINER
-    environment:
-      - DATABASE_URL=postgres://postgres:postgres@spots-db:5432/spots_dev
-      - DATABASE_TEST_URL=postgres://postgres:postgres@spots-db:5432/spots_test
-      - NODE_ENV=${NODE_ENV}
-      - TOKEN_SECRET=changeme
-      - PORT=3000
-    depends_on:
-      spots-db:
-        condition: service_healthy
-      users-service:
-        condition: service_started
-    links:
-      - spots-db
-      - users-service
+  # spots-service:
+  #   container_name: spots-service
+  #   build: ./services/spots/
+  #   volumes:
+  #     - './services/spots:/usr/src/app'
+  #     - './services/spots/package.json:/usr/src/package.json'
+  #   ports:
+  #     - '3001:3000' # expose ports - HOST:CONTAINER
+  #   environment:
+  #     - DATABASE_URL=postgres://postgres:postgres@spots-db:5432/spots_dev
+  #     - DATABASE_TEST_URL=postgres://postgres:postgres@spots-db:5432/spots_test
+  #     - NODE_ENV=${NODE_ENV}
+  #     - TOKEN_SECRET=changeme
+  #     - PORT=3000
+  #   depends_on:
+  #     spots-db:
+  #       condition: service_healthy
+  #     users-service:
+  #       condition: service_started
+  #   links:
+  #     - spots-db
+  #     - users-service
 
   users-service:
     container_name: users-service
@@ -80,27 +80,27 @@ services:
     depends_on:
       users-service:
         condition: service_started
-      spots-service:
-        condition: service_started
+      # spots-service:
+      #   condition: service_started
     links:
       - users-service
-      - spots-service
+      # - spots-service
 
-  swagger:
-    container_name: swagger
-    build: ./services/spots/swagger/
-    volumes:
-      - './services/spots/swagger:/usr/src/app'
-      - '/usr/src/app/node_modules'
-    ports:
-      - '3003:3001' # expose ports - HOST:CONTAINER
-    environment:
-      - NODE_ENV=${NODE_ENV}
-    depends_on:
-      users-service:
-        condition: service_started
-      spots-service:
-        condition: service_started
-    links:
-      - users-service
-      - spots-service
+  # swagger:
+  #   container_name: swagger
+  #   build: ./services/spots/swagger/
+  #   volumes:
+  #     - './services/spots/swagger:/usr/src/app'
+  #     - '/usr/src/app/node_modules'
+  #   ports:
+  #     - '3003:3001' # expose ports - HOST:CONTAINER
+  #   environment:
+  #     - NODE_ENV=${NODE_ENV}
+  #   depends_on:
+  #     users-service:
+  #       condition: service_started
+  #     spots-service:
+  #       condition: service_started
+  #   links:
+  #     - users-service
+  #     - spots-service
