--- a/services/users/package.json
+++ b/services/users/package.json
@@ -17,6 +17,7 @@
     "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "cors": "^2.8.4",
@@ -25,6 +26,7 @@
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
     "graphql": "^14.0.2",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
