--- a/services/users/package.json
+++ b/services/users/package.json
@@ -14,27 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.3",
-    "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
-    "express-session": "^1.15.6",
     "graphql": "^14.0.2",
+    "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.11",
     "nodemon": "^1.18.4",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "pg": "^7.4.3",
-    "pg-hstore": "^2.3.2",
-    "pg-promise": "^8.4.6",
-    "sequelize": "^4.39.0"
+    "prisma-binding": "^2.1.6"
   },
   "devDependencies": {
     "babel-jest": "^23.6.0",
