--- a/services/web/package.json
+++ b/services/web/package.json
@@ -4,7 +4,14 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.16",
-    "graphql": "^14.0.2",
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-link": "^1.2.3",
+    "apollo-link-state": "^0.4.2",
+    "bootstrap": "^4.1.3",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.10.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-apollo": "^2.2.2",
     "react-dom": "^16.5.2",
