--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: '2.1'
 
 services:
 
-  users-db:
-    container_name: users-db
-    build: ./services/users/src/database
-    ports:
-      - '5433:5432' # expose ports - HOST:CONTAINER
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-    healthcheck:
-      test: exit 0
+  # users-db:
+  #   container_name: users-db
+  #   build: ./services/users/src/database
+  #   ports:
+  #     - '5433:5432' # expose ports - HOST:CONTAINER
+  #   environment:
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=postgres
+  #   healthcheck:
+  #     test: exit 0
 
   # spots-db:
   #   container_name: spots-db
@@ -56,16 +56,16 @@ services:
     ports:
       - '3000:3000' # expose ports - HOST:CONTAINER
     environment:
-      - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_dev
-      - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
+      # - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_dev
+      # - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
       - NODE_ENV=${NODE_ENV}
       - TOKEN_SECRET=changeme
       - PORT=3000
-    depends_on:
-      users-db:
-        condition: service_healthy
-    links:
-      - users-db
+    # depends_on:
+    #   users-db:
+    #     condition: service_healthy
+    # links:
+    #   - users-db
   
   web-service:
     container_name: web-service
