--- a/services/users/package.json
+++ b/services/users/package.json
@@ -8,8 +8,11 @@
     "lint": "eslint src",
     "test": "jest",
     "watch-tests": "jest --watchAll",
-    "dev": "nodemon --inspect --watch ./src --ignore ./src/__tests__ -x \"npm start\"",
-    "coverage": "jest --coverage"
+    "dev": "npm-run-all --parallel start playground",
+    "coverage": "jest --coverage",
+    "playground": "graphql playground",
+    "prisma": "prisma",
+    "graphql": "graphql"
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +30,10 @@
     "eslint-watch": "^4.0.2",
     "jest": "^23.6.0",
     "nodemon": "^1.18.4",
-    "supertest": "^3.3.0"
+    "supertest": "^3.3.0",
+    "graphql-cli": "^2.16.4",
+    "npm-run-all": "^4.1.2",
+    "prisma": "^1.12.0"
   },
   "jest": {
     "testPathIgnorePatterns": [
