map integration and searching

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       - '8080:8080' # expose ports - HOST:CONTAINER
     environment:
       - NODE_ENV=${NODE_ENV}
+      - REACT_APP_MAPBOX_API_KEY=pk.eyJ1IjoidHJlbnRnb2luZyIsImEiOiJjam11bDQwdGwyeWZ5M3FqcGFuaHRxd3Q2In0.UyaQAvC0nx08Ih7-vq3wag
     depends_on:
       users-service:
         condition: service_started
