--- a/services/web/package.json
+++ b/services/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^2.3.0",
     "apollo-boost": "^0.1.16",
     "apollo-cache-inmemory": "^1.2.10",
     "apollo-link": "^1.2.3",
@@ -11,6 +12,7 @@
     "graphql": "^0.12.3",
     "graphql-tag": "^2.10.0",
     "jquery": "^3.3.1",
+    "mapbox-gl": "^0.49.0",
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-apollo": "^2.2.2",
