--- a/services/users/package.json
+++ b/services/users/package.json
@@ -10,7 +10,7 @@
     "watch-tests": "jest --watchAll",
     "dev": "npm-run-all --parallel start playground",
     "coverage": "jest --coverage",
-    "playground": "graphql playground",
+    "playground": "graphql playground --port 5000",
     "prisma": "prisma",
     "graphql": "graphql"
   },
