--- a/services/users/package.json
+++ b/services/users/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-link-context": "^1.0.9",
     "bcryptjs": "^2.4.3",
     "graphql": "^14.0.2",
     "graphql-yoga": "^1.16.2",
