backend updates for subscriptions and docker update

--- a/services/users/database/prisma.yml
+++ b/services/users/database/prisma.yml
@@ -10,4 +10,4 @@ secret: spotswap
 # Deploy hook
 hooks:
   post-deploy:
-    - graphql get-schema --project database
+    -  npm run graphql get-schema --project database
