--- a/services/users/.graphqlconfig.yml
+++ b/services/users/.graphqlconfig.yml
@@ -7,4 +7,4 @@ projects:
   database:
     schemaPath: src/generated/prisma.graphql
     extensions:
-      prisma: src/database/prisma.yml
+      prisma: database/prisma.yml
