--- a/services/users/Dockerfile
+++ b/services/users/Dockerfile
@@ -1,14 +1,17 @@
 FROM node:latest
 
 # set working directory
-RUN mkdir /usr/src/app
-WORKDIR /usr/src
+WORKDIR /usr/src/app
 
 # add `/usr/src/node_modules/.bin` to $PATH
-ENV PATH /usr/src/node_modules/.bin:$PATH
+# ENV PATH /usr/src/node_modules/.bin:$PATH
 
-# install and cache app dependencies
-ADD package.json /usr/src/package.json
+# # install and cache app dependencies
+# ADD package.json /usr/src/package.json
+COPY package*.json ./
+
+COPY . .
+
 RUN npm install
 
 # start app
