--- a/services/web/package.json
+++ b/services/web/package.json
@@ -19,7 +19,7 @@
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-apollo": "^2.2.2",
-    "react-bootstrap": "^0.32.4",
+    "react-bootstrap": "^1.0.0-beta.1",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
