--- a/services/web/package.json
+++ b/services/web/package.json
@@ -10,6 +10,7 @@
     "apollo-link-context": "^1.0.9",
     "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.7",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.10.0",
