--- a/services/worker/package.json
+++ b/services/worker/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.3.0",
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.6.1",
+    "lokka-transport-jwt-auth": "^1.3.3",
     "moment": "^2.22.2",
     "nodemon": "^1.18.4"
   },
