--- a/services/users/database/prisma.yml
+++ b/services/users/database/prisma.yml
@@ -1,5 +1,6 @@
 # The HTTP endpoint for your Primsa API
-endpoint: https://us1.prisma.sh/milton-lopez/spotswap/dev
+# endpoint: https://us1.prisma.sh/milton-lopez/spotswap/dev
+endpoint: http://localhost:4466/
 
 # Points to the file that holds your data model
 datamodel: datamodel.graphql
