--- a/services/prisma-local/docker-compose.yml
+++ b/services/prisma-local/docker-compose.yml
@@ -1,29 +1,26 @@
 version: '3'
 services:
   prisma:
-    image: prismagraphql/prisma:1.18
+    image: prismagraphql/prisma:1.12
     restart: always
     ports:
     - "4466:4466"
     environment:
       PRISMA_CONFIG: |
+        managementApiSecret: my-secret-secret
         port: 4466
-        managementApiSecret: mysecret42
         databases:
           default:
-            connector: postgres
-            host: postgres-db
-            port: 5432
-            user: prisma
+            connector: mysql
+            active: true
+            host: prisma-db
+            port: 3306
+            user: root
             password: prisma
-            migrations: true
-  postgres-db:
-    image: postgres
+  db:
+    container_name: prisma-db
+    image: mysql:5.7
     restart: always
     environment:
-      POSTGRES_USER: prisma
-      POSTGRES_PASSWORD: prisma
-    volumes:
-      - postgres:/var/lib/postgresql/data
-volumes:
-  postgres:
+      MYSQL_USER: root
+      MYSQL_ROOT_PASSWORD: prisma
